# angular20-bazel

./: .gitignore  BUILD  MODULE.bazel  README.md  angular.json  package.json  pnpm-lock.yaml  tsconfig.json
projects/my-lib/: BUILD
